--- a/src/app/components/administrator/dashboard/content/content.component.css
+++ b/src/app/components/administrator/dashboard/content/content.component.css
@@ -31,7 +31,7 @@
 .flex-chart-content {
     width: 100%;
     height: 90%;
-    background-color: #60CB9E;
+    background-color: #f2f2f2;
     border-radius: 10px;
     display: flex;
     justify-content: center;
