--- a/src/app/components/admin/auth/login/login.component.css
+++ b/src/app/components/admin/auth/login/login.component.css
@@ -45,3 +45,8 @@ form.login-form {
     text-decoration: none;
     text-align: right;
 }
+
+re-captcha.is-invalid > div {
+	border: 1px solid #dc3545 !important;
+	border-radius: 0.2rem;
+  }
