--- a/src/app/components/students/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/students/dashboard/side-bar/side-bar.component.html
@@ -10,17 +10,7 @@
             </div>
         </div>
     </div>
-    <div class="admin-project-options flexbox-container">
-        <h3>Administración del proyecto</h3>
-        <div class="options">
-            <div *ngFor="let project_option of project_admin_options ">
-                <div class="option " [routerLink]="[project_option.link] ">
-                    <mat-icon class="icon ">{{ project_option.icon }}</mat-icon>
-                    <span>{{ project_option.text }}</span>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <div class="fair-details-options flexbox-container ">
         <h3>Detalles de la feria</h3>
         <div class="options ">
@@ -28,6 +18,18 @@
                 <div class="option " [routerLink]="[fair_option.link] ">
                     <mat-icon class="icon ">{{ fair_option.icon }}</mat-icon>
                     <span>{{ fair_option.text }}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="fair-document-options flexbox-container ">
+        <h3>Documentos de la feria</h3>
+        <div class="options ">
+            <div *ngFor="let fair_document of fair_documents ">
+                <div class="option " [routerLink]="[fair_document.link] ">
+                    <mat-icon class="icon ">{{ fair_document.icon }}</mat-icon>
+                    <span>{{ fair_document.text }}</span>
                 </div>
             </div>
         </div>
