--- a/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
@@ -14,16 +14,20 @@
     </div>
     <div class="users-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <ng-container matColumnDef="userId">
+                <th mat-header-cell *matHeaderCellDef> Cédula </th>
+                <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
+            </ng-container>
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="lastname">
-                <th mat-header-cell *matHeaderCellDef> Apellido </th>
+                <th mat-header-cell *matHeaderCellDef> Apellidos </th>
                 <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
             </ng-container>
             <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef> Correo </th>
+                <th mat-header-cell *matHeaderCellDef> Correo Electrónico</th>
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
             <ng-container matColumnDef="phoneNumber">
