--- a/src/app/components/administrator/dashboard/top-menu/top-menu.component.css
+++ b/src/app/components/administrator/dashboard/top-menu/top-menu.component.css
@@ -1,4 +1,4 @@
-* {
+/** {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -65,4 +65,4 @@ mat-divider {
 img {
     height: 70%;
     width: 25%;
-}
+}*/
