Restore side and nav bars

--- a/src/app/components/administrator/dashboard/side-bar/side-bar.component.css
+++ b/src/app/components/administrator/dashboard/side-bar/side-bar.component.css
@@ -1,4 +1,4 @@
-/** {
+* {
     margin: 0;
     padding: 0;
     background-color: #354F52;
@@ -44,60 +44,4 @@ span {
 mat-icon {
     font-size: 25pt;
     cursor: pointer;
-}*/
-
-mat-toolbar {
-    background: #84A98C;
-    color: white;
-}
-
-mat-sidenav{
-    /*margin: 16px;
-    width: 200px;
-    border-right: none;*/
-    background: #354F52;
-    color: #FFFFFF;
-    padding: 16px;
-    text-align: center;
-    height: 100%;
-}
-
-.menu-buttom{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    font-size: 1rem;
-}
-
-mat-icon {
-    margin-right: 8px;
-}
-
-.avatar {
-    margin-top: 16px;
-    width: 100px;
-    height: 100px;
-    margin-bottom: 16px;
-}
-  
-.name {
-    margin-top: 8px;
-    font-weight: normal;
-}
-  
-.designation {
-    margin-top: 2px;
-    font-size: 0.9rem;
-    color: lightgrey;
-}
-  
-mat-divider {
-    margin-top: 16px;
-    margin-bottom: 16px;
-    background-color: rgba(255, 255, 255, 0.5);
-}
-
-mat-sidenav-container{
-    height: calc(100vh - 65px);
 }
