--- a/src/app/components/administrator/dashboard/top-menu/top-menu.component.html
+++ b/src/app/components/administrator/dashboard/top-menu/top-menu.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="top-menu-container flexbox-container">
+<div class="top-menu-container flexbox-container">
     <div class="logo-container">
         <img src="/assets/images/Escudo.png">
     </div>
@@ -24,4 +24,4 @@
               </mat-menu>
         </div>
     </div>
-</div> -->
+</div>
