--- a/src/app/components/administrator/dashboard/top-menu/top-menu.component.html
+++ b/src/app/components/administrator/dashboard/top-menu/top-menu.component.html
@@ -1,27 +1,42 @@
 <div class="top-menu-container flexbox-container">
-    <div class="logo-container">
-        <img src="/assets/images/Escudo.png">
-    </div>
-    <div class="menu-list">
-        <div class="right-container flexbox-container">
-            <div class="display-user-info">
-                <span>{{ user_name }}</span>
-                <mat-divider></mat-divider>
-                <span>{{ user_role }}</span>
-            </div>
-            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #menu="matMenu">
-                <button mat-menu-item routerLink="/administrator/settings">
-                  <mat-icon>settings</mat-icon>
-                  <span >Configuraciones</span>
-                </button>
-                <button mat-menu-item>
-                  <mat-icon (click)="logout()" >exit_to_app</mat-icon>
-                  <span (click)="logout()" >Cerrar sesión</span>
-                </button>
-              </mat-menu>
+  <div class="logo-container">
+    <img src="/assets/images/Escudo.png">
+  </div>
+  <div class="menu-list">
+    <div class="right-container flexbox-container">
+      <div class="left-content">
+        <div class="left-container">
+            <ng-container *ngIf="currentDays == 'Crear Feria'; then trueCondition else elseTemplate"></ng-container>
+            <ng-template #trueCondition>
+              <button class="button" (click)="addFair()"> {{ currentDays }} </button>
+            </ng-template>
+            <ng-template #elseTemplate>
+              <h4>Días restantes de la feria: {{ currentDays }} días</h4>
+            </ng-template>
+        </div> 
+      </div>
+      <div class="right-content">
+        <div class="display-user-info">
+          <span>{{ user_name }}</span>
+          <mat-divider></mat-divider>
+          <span>{{ user_role }}</span>
         </div>
-    </div>
+        <div class="settings-button">
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item routerLink="/administrator/settings">
+              <mat-icon>settings</mat-icon>
+              <span>Configuraciones</span>
+            </button>
+            <button mat-menu-item>
+              <mat-icon (click)="logout()">exit_to_app</mat-icon>
+              <span (click)="logout()">Cerrar sesión</span>
+            </button>
+          </mat-menu>
+        </div>
+      </div>
+      </div>
+  </div>
 </div>
