--- a/src/app/components/judges/dashboard/top-menu/top-menu.component.css
+++ b/src/app/components/judges/dashboard/top-menu/top-menu.component.css
@@ -29,15 +29,43 @@
     background-color: #84A98C;
     color: #FFFFFF;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .right-container {
-    width: 25%;
+    width: 100%;
     height: 100%;
     padding: 0 2rem;
     justify-content: space-around;
     align-items: center;
+}
+
+.left-content {
+    width: 60%;
+    margin-top: 1rem;
+}
+
+.right-content {
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: flex-end;
+}
+
+.settings-button {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-top: 1rem;
+}
+
+.left-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 70%;
 }
 
 .icon {
