Remove console log from protocols service add remove student in projects service and in project-details component

--- a/src/app/components/students/dashboard/project-details/project-details.component.css
+++ b/src/app/components/students/dashboard/project-details/project-details.component.css
@@ -51,6 +51,14 @@ h2 {
     height: 100%;
 }
 
+.button-group1 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    min-height: 1px;
+}
+
 .button-group {
     display: flex;
     flex-direction: column;
