--- a/src/app/components/students/dashboard/project-details/project-details.component.html
+++ b/src/app/components/students/dashboard/project-details/project-details.component.html
@@ -16,6 +16,9 @@
             </div>
             <h3 class="space">Categoría: {{ category }}</h3>
             <h3 class="space">Calificación Final: {{ qualification }}</h3>
+            <div class="button-group1 space">
+                <button class="button" (click)="dialogDelete()" mat-raised-button>Renunciar de la Feria</button>
+            </div>
         </div>
     </div>
     <mat-divider vertical style="height:85%; margin: 0 5%;"></mat-divider>
