--- a/src/app/components/admin/auth/login/login.component.html
+++ b/src/app/components/admin/auth/login/login.component.html
@@ -3,15 +3,18 @@
     <div class="flex-container">
       <mat-form-field class="full-width" appearance="outline">
         <mat-label>Nombre de usuario</mat-label>
-        <input type="text" matInput formControlName="username">
+        <input type="text" matInput formControlName="username" required>
+        <mat-error *ngIf="errorValidator('UsernameFormControl', 'required')">El nombre de usuario es obligatorio</mat-error>
+        <mat-error *ngIf="errorValidator('UsernameFormControl', 'maxlength')">Limite máximo de 15 caracteres alcanzado</mat-error>
+        <mat-error *ngIf="errorValidator('UsernameFormControl', 'minlength')">Limite mínimo de 5 caracteres sin completar</mat-error>
       </mat-form-field>
       <div class="password">
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Contraseña</mat-label>
-          <input matInput type="password" formControlName="password">
+          <input matInput type="password" formControlName="password" required>
         </mat-form-field>
         <br>
-        <a id="forgot-redirect" class="full-width" [routerLink]="['/auth', 'forget-password']">¿Perdiste la contraseña?</a>
+        <a id="forgot-redirect" class="full-width" [routerLink]="['/auth', 'forget-password']">¿Olividaste la contraseña?</a>
       </div>
       <div>
         <form #form="ngForm" class="mb-4">
