Add more forms validators

--- a/src/app/components/admin/auth/login/login.component.html
+++ b/src/app/components/admin/auth/login/login.component.html
@@ -4,9 +4,9 @@
       <mat-form-field class="full-width" appearance="outline">
         <mat-label>Nombre de usuario</mat-label>
         <input type="text" matInput formControlName="username" required>
-        <mat-error *ngIf="errorValidator('UsernameFormControl', 'required')">El nombre de usuario es obligatorio</mat-error>
-        <mat-error *ngIf="errorValidator('UsernameFormControl', 'maxlength')">Limite máximo de 15 caracteres alcanzado</mat-error>
-        <mat-error *ngIf="errorValidator('UsernameFormControl', 'minlength')">Limite mínimo de 5 caracteres sin completar</mat-error>
+        <mat-error *ngIf="errorValidator('username', 'required')">El nombre de usuario es obligatorio</mat-error>
+        <mat-error *ngIf="errorValidator('username', 'maxlength')">Limite máximo de 15 caracteres alcanzado</mat-error>
+        <mat-error *ngIf="errorValidator('username', 'minlength')">Limite mínimo de 5 caracteres sin completar</mat-error>
       </mat-form-field>
       <div class="password">
         <mat-form-field class="full-width" appearance="outline">
