--- a/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
+++ b/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
@@ -8,19 +8,19 @@
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Nombre del juez</mat-label>
-                    <input type="text" matInput formControlName="NameFormControl" required>
+                    <input type="text" matInput formControlName="NameFormControl" required onkeypress="return /[a-zA-ZñÑá-úÁ-Ú]/i.test(event.key)">
                     <mat-error *ngIf="errorValidator('NameFormControl', 'required')">El nombre del juez es obligatorio</mat-error>
-                    <mat-error *ngIf="errorValidator('NameFormControl', 'minlength')">Limite mínimo de 3 caracteres sin completar</mat-error>
-                    <mat-error *ngIf="errorValidator('NameFormControl', 'maxlength')">Limite máximo de 30 caracteres alcanzado</mat-error>
+                    <mat-error *ngIf="errorValidator('NameFormControl', 'minlength')">Límite mínimo de 3 caracteres sin completar</mat-error>
+                    <mat-error *ngIf="errorValidator('NameFormControl', 'maxlength')">Límite máximo de 30 caracteres alcanzado</mat-error>
                 </mat-form-field>
             </div>
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Apellidos del juez</mat-label>
-                    <input type="text" matInput formControlName="LastFormControl" required>
+                    <input type="text" matInput formControlName="LastFormControl" required onkeypress="return /[a-zA-ZñÑá-úÁ-Ú ]/i.test(event.key)">
                     <mat-error *ngIf="errorValidator('LastFormControl', 'required')">Los apellidos del juez son obligatorios</mat-error>
-                    <mat-error *ngIf="errorValidator('LastFormControl', 'maxlength')">Limite máximo de 100 caracteres alcanzado</mat-error>
-                    <mat-error *ngIf="errorValidator('LastFormControl', 'minlength')">Limite mínimo de 10 caracteres sin completar</mat-error>
+                    <mat-error *ngIf="errorValidator('LastFormControl', 'maxlength')">Límite máximo de 100 caracteres alcanzado</mat-error>
+                    <mat-error *ngIf="errorValidator('LastFormControl', 'minlength')">Límite mínimo de 10 caracteres sin completar</mat-error>
                 </mat-form-field>
             </div>
         </div>
@@ -31,8 +31,8 @@
                     <mat-label>Nombre de usuario del juez</mat-label>
                     <input type="text" matInput formControlName="UsernameFormControl" required>
                     <mat-error *ngIf="errorValidator('UsernameFormControl', 'required')">El nombre de usuario es obligatorio</mat-error>
-                    <mat-error *ngIf="errorValidator('UsernameFormControl', 'maxlength')">Limite máximo de 15 caracteres alcanzado</mat-error>
-                    <mat-error *ngIf="errorValidator('UsernameFormControl', 'minlength')">Limite mínimo de 5 caracteres sin completar</mat-error>
+                    <mat-error *ngIf="errorValidator('UsernameFormControl', 'maxlength')">Límite máximo de 15 caracteres alcanzado</mat-error>
+                    <mat-error *ngIf="errorValidator('UsernameFormControl', 'minlength')">Límite mínimo de 5 caracteres sin completar</mat-error>
                 </mat-form-field>
             </div>
             <div class="col-6">
@@ -40,8 +40,8 @@
                     <mat-label>Cédula del juez</mat-label>
                     <input type="text" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX" maxlength="9" required>
                     <mat-error *ngIf="errorValidator('IdFormControl', 'required')">El número de cédula es obligatorio</mat-error>
-                    <mat-error *ngIf="errorValidator('IdFormControl', 'maxlength')">Limite máximo de 9 caracteres alcanzado</mat-error>
-                    <mat-error *ngIf="errorValidator('IdFormControl', 'minlength')">Limite mínimo de 9 caracteres sin completar</mat-error>
+                    <mat-error *ngIf="errorValidator('IdFormControl', 'maxlength')">Límite máximo de 9 caracteres alcanzado</mat-error>
+                    <mat-error *ngIf="errorValidator('IdFormControl', 'minlength')">Límite mínimo de 9 caracteres sin completar</mat-error>
                 </mat-form-field>
             </div>
         </div>
@@ -50,15 +50,17 @@
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Empresa donde pertenece el juez</mat-label>
-                    <input type="text" matInput formControlName="InstitutionFormControl" required>
+                    <input type="text" matInput formControlName="InstitutionFormControl" required onkeypress="return /[a-zA-ZñÑá-úÁ-Ú]/i.test(event.key)">
                     <mat-error *ngIf="errorValidator('InstitutionFormControl', 'required')">La institución a la que pertenece el juez es obligatoria</mat-error>
+                    <mat-error *ngIf="errorValidator('InstitutionFormControl', 'maxlength')">Límite máximo de 50 caracteres alcanzado</mat-error>
                 </mat-form-field>
             </div>
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Posición del Juez</mat-label>
-                    <input type="text" matInput formControlName="PositionFormControl" required>
+                    <input type="text" matInput formControlName="PositionFormControl" required onkeypress="return /[a-zA-ZñÑá-úÁ-Ú]/i.test(event.key)">
                     <mat-error *ngIf="errorValidator('PositionFormControl', 'required')">La posición del juez es obligatoria</mat-error>
+                    <mat-error *ngIf="errorValidator('PositionFormControl', 'maxlength')">Límite máximo de 30 caracteres alcanzado</mat-error>
                 </mat-form-field>
             </div>
         </div>
@@ -69,8 +71,8 @@
                 <input type="email" matInput formControlName="EmailFormControl" placeholder="abc@gmail.com" required>
                 <mat-error *ngIf="errorValidator('EmailFormControl', 'required')">El correo electrónico del juez es obligatorio</mat-error>
                 <mat-error *ngIf="errorValidator('EmailFormControl', 'email')">Se necesita una dirección de correo electrónico válida</mat-error>
-                <mat-error *ngIf="errorValidator('EmailFormControl', 'maxlength')">Limite máximo de 100 caracteres alcanzado</mat-error>
-                <mat-error *ngIf="errorValidator('EmailFormControl', 'minlength')">Limite mínimo de 5 caracteres sin completar</mat-error>
+                <mat-error *ngIf="errorValidator('EmailFormControl', 'maxlength')">Límite máximo de 100 caracteres alcanzado</mat-error>
+                <mat-error *ngIf="errorValidator('EmailFormControl', 'minlength')">Límite mínimo de 10 caracteres sin completar</mat-error>
             </mat-form-field>
             
             <mat-form-field class="full-width" appearance="outline">
@@ -78,8 +80,8 @@
                 <input type="phone" matInput formControlName="PhoneFormControl" placeholder="88888888" maxlength="8" required autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" min="1" required>
                 <mat-error *ngIf="errorValidator('PhoneFormControl', 'required')">El número de teléfono es obligatorio</mat-error>
                 <mat-error *ngIf="errorValidator('PhoneFormControl', 'pattern')">El campo solo acepta números de teléfono validos</mat-error>
-                <mat-error *ngIf="errorValidator('PhoneFormControl', 'maxlength')">Limite máximo de 8 caracteres alcanzado</mat-error>
-                <mat-error *ngIf="errorValidator('PhoneFormControl', 'minlength')">Limite mínimo de 8 caracteres sin completar</mat-error>
+                <mat-error *ngIf="errorValidator('PhoneFormControl', 'maxlength')">Límite máximo de 8 caracteres alcanzado</mat-error>
+                <mat-error *ngIf="errorValidator('PhoneFormControl', 'minlength')">Límite mínimo de 8 caracteres sin completar</mat-error>
             </mat-form-field>
         </div>
 
