--- a/src/app/components/administrator/dashboard/fair-categories/add-category/add-category.component.html
+++ b/src/app/components/administrator/dashboard/fair-categories/add-category/add-category.component.html
@@ -10,7 +10,10 @@
                 <div class="col-12">
                     <mat-form-field class="full-width" appearance="legacy">
                         <mat-label>Categoría</mat-label>
-                        <input class="full-width" matInput formControlName="descriptionForm">
+                        <input class="full-width" matInput formControlName="descriptionForm" required onkeypress="return /[a-zA-ZñÑá-úÁ-Ú]/i.test(event.key)">
+                        <mat-error *ngIf="errorValidator('descriptionForm', 'required')">El nombre de la categoría es obligatorio</mat-error>
+                        <mat-error *ngIf="errorValidator('descriptionForm', 'maxlength')">Limite máximo de 20 caracteres alcanzado</mat-error>
+                        <mat-error *ngIf="errorValidator('descriptionForm', 'minlength')">Limite mínimo de 2 caracteres sin completar</mat-error>
                     </mat-form-field>
                 </div>
             </div>
