--- a/src/app/components/administrator/dashboard/fair-categories/fair-categories.component.html
+++ b/src/app/components/administrator/dashboard/fair-categories/fair-categories.component.html
@@ -3,7 +3,7 @@
         <h1>Categorías de la Feria</h1>
         <div class="sub-container">
             <form class="example-form">
-            <button mat-raised-button class="add-button" (click)="addCategory()">Agregar</button>
+            <button mat-raised-button class="add-button" (click)="addCategory()">Agregar categoría</button>
         </form>
         </div>
     </div>
@@ -14,12 +14,12 @@
                 <td mat-cell *matCellDef="let element"> {{element.id}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef> Descripción </th>
+                <th mat-header-cell *matHeaderCellDef> Categoría </th>
                 <td mat-cell *matCellDef="let element"> {{element.description}}</td>
             </ng-container>
              <!--Buttons-->
              <ng-container matColumnDef="buttons">
-                <th mat-header-cell *matHeaderCellDef></th>
+                <th mat-header-cell *matHeaderCellDef>Eliminar categoría</th>
                 <td mat-cell *matCellDef="let element">
                     <mat-icon (click)="dialogDelete(element.id)" class="btn-delete">clear</mat-icon>
                 </td>
