--- a/src/app/components/administrator/dashboard/fair-protocols/fair-protocols.component.css
+++ b/src/app/components/administrator/dashboard/fair-protocols/fair-protocols.component.css
@@ -34,6 +34,8 @@
     height: 2.5rem;
     margin-left: 2rem;
     margin-bottom: 1rem;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 
@@ -42,6 +44,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    padding-right: 4%;
 }
 
 .btn-delete{
