--- a/src/app/components/administrator/dashboard/fair-protocols/fair-protocols.component.html
+++ b/src/app/components/administrator/dashboard/fair-protocols/fair-protocols.component.html
@@ -10,7 +10,7 @@
     <div class="users-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <th mat-header-cell *matHeaderCellDef> Número de protocolo </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
